# Ecoflow_API

./: README.md  ecoflow_API_module.py  pyproject.toml
src/ecoflow_api/: __init__.py  ecoflow_delta2_max.py
