[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoflow-api"
version = "0.2.3"
description = "Ecoflow API library"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

dependencies = [
    "requests",
	"flatten_dict",
	"urllib3"
]
authors = [
  { name="Oleksii", email="oleksii.hudyma@gmail.com" },
]

license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Ohudyma/Ecoflow_API"
Documentation = "https://github.com/Ohudyma/Ecoflow_API"
Repository = "https://github.com/Ohudyma/Ecoflow_API.git"
Issues = "https://github.com/Ohudyma/Ecoflow_API/issues"





